--- a/index.html
+++ b/index.html
@@ -547,8 +547,9 @@
 
         <footer>
             <h3 style="color: #667eea; margin-bottom: 15px;">Спасибо за внимание! 🚀</h3>
-            <p>Этот сайт создан для образовательных целей</p>
-            <p style="margin-top: 10px; color: #666;">© 2024 Мир Алгоритмов</p>
+            <p>Сайт создан исключительно для образовательных целей.</p>
+            <p>Сайт создал <b>Сербин Алексей</b></p>
+            <p style="margin-top: 10px; color: #666;">© 2025 ИВТ-2512</p>
         </footer>
     </div>
 
